mobile-menu + issues

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -14,3 +14,4 @@
 @import './sections/footer.scss';
 @import './sections/stages.scss';
 @import './sections/modals.scss';
+@import './sections/mobile-menu.scss';
