--- a/scss/index.css
+++ b/scss/index.css
@@ -297,9 +297,11 @@ button[type="submit"] {
   .header-call {
     font-weight: 700;
     column-gap: 10px; }
-  .header nav a {
+  .header-menu {
+    display: none; }
+  .header-navigation a {
     margin-right: 28px; }
-    .header nav a:last-child {
+    .header-navigation a:last-child {
       margin-right: 0; }
   @media screen and (max-width: 1050px) {
     .header {
@@ -312,17 +314,18 @@ button[type="submit"] {
           width: 30px;
           height: 30px;
           margin-right: 15px; }
-      .header nav a {
+      .header-navigation a {
         margin-right: 10px;
         font-size: 14px; }
       .header-call {
         font-size: 14px; } }
   @media screen and (max-width: 768px) {
-    .header-call span {
-      display: none; } }
-  @media screen and (max-width: 520px) {
-    .header nav {
-      display: none; } }
+    .header-navigation {
+      display: none; }
+    .header-call {
+      display: none; }
+    .header-menu {
+      display: block; } }
 
 .hero {
   color: #fff;
@@ -414,10 +417,6 @@ button[type="submit"] {
     flex: 1; }
     .talk-examples__item h3 {
       color: #fff; }
-    .talk-examples__item-buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 7px; }
     .talk-examples__item .btn {
       gap: 12px;
       padding: 0;
@@ -441,12 +440,7 @@ button[type="submit"] {
     gap: 20px; }
     .talk-examples__item {
       padding: 15px;
-      height: 230px; }
-      .talk-examples__item-buttons {
-        flex-direction: row; }
-      .talk-examples__item .btn {
-        width: auto;
-        flex: 1; } }
+      height: 230px; } }
 @media screen and (max-width: 768px) {
   .talk-examples {
     gap: 10px;
@@ -456,25 +450,20 @@ button[type="submit"] {
       width: calc(50% - 10px);
       height: 180px; } }
 @media screen and (max-width: 520px) {
-  .talk-examples__item {
-    flex-direction: row;
-    align-items: center;
-    background-image: none !important;
-    width: 100%;
-    height: auto;
-    border-bottom: 1px solid #000;
-    padding: 10px 5px; }
-    .talk-examples__item h3 {
-      color: inherit; }
-    .talk-examples__item .btn {
-      width: 30px;
-      height: 30px; }
-      .talk-examples__item .btn.playing {
-        border-color: #000; }
-  .talk-examples-icon__playing path {
-    stroke: #000; }
-  .talk .audio-example-text {
-    display: none; } }
+  .talk-examples {
+    margin-bottom: 20px; }
+    .talk-examples__item {
+      padding: 10px;
+      height: 140px; }
+      .talk-examples__item h3 {
+        font-size: 12px; }
+      .talk-examples__item .btn {
+        height: 30px;
+        gap: 5px; }
+        .talk-examples__item .btn svg {
+          height: 10px; }
+    .talk-examples .audio-example-text {
+      font-size: 10px; } }
 
 .discussion {
   background: var(--bg); }
@@ -572,17 +561,22 @@ button[type="submit"] {
       line-height: 29px;
       display: flex;
       align-items: flex-start; }
-      .work ul li img {
+      .work ul li:before {
+        content: '';
+        background: url(/images/list-arrow.svg) no-repeat center center;
+        background-size: contain;
         width: 60px;
         margin-right: 40px;
-        display: inline;
-        height: 29px; }
+        height: 29px;
+        flex-shrink: 0; }
   @media screen and (max-width: 1050px) {
-    .work ul li {
-      font-size: 16px; }
-      .work ul li img {
-        width: 28px;
-        margin-right: 20px; } }
+    .work ul {
+      row-gap: 10px; }
+      .work ul li {
+        font-size: 16px; }
+        .work ul li:before {
+          width: 28px;
+          margin-right: 15px; } }
   @media screen and (max-width: 768px) {
     .work ul {
       grid-template-columns: 100%;
@@ -590,12 +584,12 @@ button[type="submit"] {
       .work ul li {
         font-size: 12px;
         line-height: 100%; }
-        .work ul li img {
+        .work ul li:before {
           height: 16px; } }
   @media screen and (max-width: 520px) {
     .work ul li {
       line-height: normal; }
-      .work ul li img {
+      .work ul li:before {
         width: 20px;
         margin-right: 8px; } }
 
@@ -851,5 +845,21 @@ button[type="submit"] {
         padding: 10px 0; }
         .modal .input-wrap input {
           font-size: 12px; } }
+
+.mobile-menu {
+  justify-content: flex-end;
+  padding: 0;
+  padding-left: 56px; }
+  .mobile-menu__content {
+    padding: 20px 15px;
+    width: max-content; }
+  .mobile-menu__navigation a {
+    display: block;
+    margin-bottom: 10px; }
+  .mobile-menu__phone {
+    margin-top: 20px;
+    display: flex; }
+    .mobile-menu__phone svg {
+      margin-right: 15px; }
 
 /*# sourceMappingURL=index.css.map */
